--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 :root {
   --border-color: #e3e5e4;
-  --background-color: #c3c7ca;
+  --background-color: #177e89;
   --text-color: #34444f;
 }
 
@@ -26,6 +26,7 @@ body {
   color: var(--text-color);
   padding: 0;
   list-style-type: none;
+  box-shadow: 5px 5px lightgray;
 }
 .draggable-list li {
   background-color: #fff;
@@ -70,4 +71,23 @@ body {
   justify-content: space-between;
   padding: 15px;
   flex: 1;
+}
+
+.check-btn {
+  background-color: #f0d332;
+  border: none;
+  width: 160px;
+  height: 50px;
+  border-radius: 5px;
+  font-size: 16px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.check-btn:active {
+  transform: scale(0.9);
+}
+
+.check-btn:focus {
+  outline: none;
 }
